--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,15 @@
     <div class="main-section">
       <div class="container main-section__nav-container">
         <header class="main-section__header">
-          <a href="#"><img src="logos/GScool Logo.png" alt="logo" /></a>
+          <a href="#"
+            ><img class="main-section__logo" src="logos/logoIll.svg" alt="logo"
+          /></a>
         </header>
-        <nav class="main-section__nav">
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+        <nav class="main-section__nav nav-menu">
+          <ul class="nav-menu__list">
+            <li class="nav-menu__list-item">About Me</li>
+            <li class="nav-menu__list-item">My Lessons</li>
+            <li class="nav-menu__list-item">Sign Up</li>
           </ul>
         </nav>
       </div>
