--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <!-- first section -->
     <div class="main-section">
       <div class="container main-section__nav-container">
+        <!-- navigation bar -->
         <header class="main-section__header">
           <a href="#"
             ><img class="main-section__logo" src="logos/logoIll.svg" alt="logo"
@@ -23,6 +25,19 @@
             <li class="nav-menu__list-item">Sign Up</li>
           </ul>
         </nav>
+      </div>
+      <div class="container main-section__content-container">
+        <!-- left one of first section -->
+        <div class="left-wrapper">
+          <img
+            src="img/guitar player f.png"
+            alt="photo"
+            class="left-wrapper__img"
+          />
+          <div class="left-wrapper__rectangle-blue"></div>
+          <div class="left-wrapper__rectangle-orange"></div>
+          <div class="left-wrapper__rectangle-grey"></div>
+        </div>
       </div>
     </div>
   </body>
