--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Private one-on-one guitar lessons" />
     <title>Guitar Lessons</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/ade57427e9.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- first section -->
@@ -37,6 +41,21 @@
           <div class="left-wrapper__rectangle-blue"></div>
           <div class="left-wrapper__rectangle-orange"></div>
           <div class="left-wrapper__rectangle-grey"></div>
+        </div>
+        <!-- right one of first section -->
+        <div class="right-wrapper">
+          <div class="right-wrapper__icons-box icons">
+            <div class="icons__item">
+              <i class="fa-brands fa-facebook-f"></i>
+            </div>
+            <div class="icons__item">
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="icons__item"><i class="fa-brands fa-whatsapp"></i></div>
+            <div class="icons__item">
+              <i class="fa-brands fa-weixin"></i>
+            </div>
+          </div>
         </div>
       </div>
     </div>
