--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,13 @@
               <i class="fa-brands fa-weixin"></i>
             </div>
           </div>
+          <h1 class="right-wrapper__title title">Hello. I'm Vince</h1>
+          <p class="right-wrapper__text">
+            I’m a guitar teacher with more than 10 years experience
+          </p>
+          <div class="right-wrapper__button buttons">
+            <button>Book a Lessons</button>
+          </div>
         </div>
       </div>
     </div>
