--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,9 @@
             I’m a guitar teacher with more than 10 years experience
           </p>
           <div class="right-wrapper__button buttons">
-            <button>Book a Lessons</button>
+            <button class="buttons__main-btn">Book a Lessons</button>
+            <button class="buttons__main-btn">Prices</button>
+            <button class="buttons__main-btn">Chat to Me</button>
           </div>
         </div>
       </div>
