--- a/src/index.html
+++ b/src/index.html
@@ -61,11 +61,17 @@
             I’m a guitar teacher with more than 10 years experience
           </p>
           <div class="right-wrapper__button buttons">
-            <button class="buttons__main-btn">Book a Lessons</button>
+            <button class="buttons__main-btn">Book a Lesson</button>
             <button class="buttons__main-btn">Prices</button>
             <button class="buttons__main-btn">Chat to Me</button>
           </div>
         </div>
+        <div class="main-section__first-ellipse ellipse">
+          <div class="ellipse__subtract"></div>
+        </div>
+      </div>
+      <div class="main-section__second-ellipse ellipse ellipse_big">
+        <div class="ellipse__subtract ellipse__substract_big"></div>
       </div>
     </div>
   </body>
