--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
     ></script>
   </head>
   <body>
-    <!-- first section -->
-    <div class="main-section">
+    <!-- First section -->
+    <section class="main-section">
       <div class="container main-section__nav-container">
-        <!-- navigation bar -->
+        <!-- Navigation bar -->
         <header class="main-section__header">
           <a href="#"
             ><img class="main-section__logo" src="logos/logoIll.svg" alt="logo"
@@ -31,7 +31,7 @@
         </nav>
       </div>
       <div class="container main-section__content-container">
-        <!-- left one of first section -->
+        <!-- left part of first section -->
         <div class="left-wrapper">
           <img
             src="img/guitar player f.png"
@@ -42,7 +42,7 @@
           <div class="left-wrapper__rectangle-orange"></div>
           <div class="left-wrapper__rectangle-grey"></div>
         </div>
-        <!-- right one of first section -->
+        <!-- right part of first section -->
         <div class="right-wrapper">
           <div class="right-wrapper__icons-box icons">
             <div class="icons__item">
@@ -66,6 +66,7 @@
             <button class="buttons__main-btn">Chat to Me</button>
           </div>
         </div>
+        <!-- Ellipses -->
         <div class="main-section__first-ellipse ellipse">
           <div class="ellipse__subtract"></div>
         </div>
@@ -73,6 +74,34 @@
       <div class="main-section__second-ellipse ellipse ellipse_big">
         <div class="ellipse__subtract ellipse__substract_big"></div>
       </div>
-    </div>
+    </section>
+
+    <!-- Second section -->
+    <section class="second-section">
+      <div class="container second-section__container">
+        <!-- Title -->
+        <h2 class="second-section__title title">I’m teaching to play with</h2>
+        <!-- Cards -->
+        <div class="second-section__cards-box">
+          <div class="second-section__cards-item cards-item">
+            <img class="cards-item__img" src="img/electro.png" alt="Electro" />
+            <p class="cards-item__text">Electro<br />Guitar</p>
+          </div>
+
+          <div class="second-section__cards-item cards-item cards-item_orange">
+            <img
+              class="cards-item__img"
+              src="img/acuistic.png"
+              alt="Acuistic"
+            />
+            <p class="cards-item__text">Acoustic<br />Guitar</p>
+          </div>
+          <div class="second-section__cards-item cards-item cards-item_blue">
+            <img class="cards-item__img" src="img/ukulele.png" alt="Ukulele" />
+            <p class="cards-item__text">Ukulele<br />Guitar</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
