--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,56 @@
             <p class="cards-item__text">Ukulele<br />Guitar</p>
           </div>
         </div>
+        <!-- Icons -->
+        <div class="second-section__icons-box icons-box">
+          <div class="second-section__icons-item icons-item">
+            <img
+              src="icons/01-icon second section.png"
+              alt="Rate"
+              class="icons-item__img"
+            />
+            <p class="icons-item__text">
+              <span>12</span> years<br />of teaching
+            </p>
+          </div>
+          <div class="second-section__icons-item icons-item">
+            <img
+              src="icons/02-icon second section.png"
+              alt="Time Rate"
+              class="icons-item__img"
+            />
+            <p class="icons-item__text">
+              <span>1000+</span><br />Hours of<br />teaching
+            </p>
+          </div>
+          <div class="second-section__icons-item icons-item">
+            <img
+              src="icons/03-icon second section.png"
+              alt="Reviews Rate"
+              class="icons-item__img"
+            />
+            <p class="icons-item__text">
+              <span>100+</span><br />Positive<br />Reviews
+            </p>
+          </div>
+          <div class="second-section__icons-item icons-item">
+            <img
+              src="icons/04-icon second section.png"
+              alt="Rate"
+              class="icons-item__img"
+            />
+            <p class="icons-item__text">
+              <span>100+</span><br />Grateful<br />Students
+            </p>
+          </div>
+        </div>
+        <!-- Ellipses -->
+        <div class="second-section__first-ellipse ellipse">
+          <div class="ellipse__subtract"></div>
+        </div>
+        <div class="second-section__second-ellipse ellipse">
+          <div class="ellipse__subtract"></div>
+        </div>
       </div>
     </section>
   </body>
