--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
           <p class="right-wrapper__text">
             I’m a guitar teacher with more than 10 years experience
           </p>
+          <!-- Buttons -->
           <div class="right-wrapper__button buttons">
             <button class="buttons__main-btn">Book a Lesson</button>
             <button class="buttons__main-btn">Prices</button>
@@ -150,6 +151,43 @@
         </div>
         <div class="second-section__second-ellipse ellipse">
           <div class="ellipse__subtract"></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Third section -->
+    <section class="third-section">
+      <div class="container third-section__container">
+        <!-- Left wrapper -->
+        <div class="third-section__left-wrapper">
+          <!-- Title -->
+          <h3 class="third-section__left-title title">Learning</h3>
+        </div>
+        <!-- Right wrapper -->
+        <div class="third-section__right-wrapper">
+          <!-- Title -->
+          <h4 class="third-section__right-title title">
+            I’m training<br />virtuosos
+          </h4>
+          <p class="third-section__text">
+            Long childhood makes a technical and mental virtuoso out of man, but
+            it also leaves a life-long residue of emotional immaturity in him.'
+            <br /><br />
+            In addition to virtuosos and professionals, there are very deep
+            musicians.
+            <br /><br />
+            “IF MUSIC be the food of love, play on, give me excess of it.” And
+            if not? Well, what exactly is it for? The production and consumption
+            of music is a big part of the economy. The first use to which
+            commercial recording, in the form of Edison's phonographs, was to
+            bring music to the living rooms and picnic tables of those who could
+            not afford to pay live musicians.
+          </p>
+          <div class="right-wrapper__button buttons">
+            <button class="buttons__main-btn">Book a Lesson</button>
+            <button class="buttons__main-btn">Prices</button>
+            <button class="buttons__main-btn">Chat to Me</button>
+          </div>
         </div>
       </div>
     </section>
