--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
             In addition to virtuosos and professionals, there are very deep
             musicians.
             <br /><br />
-            “IF MUSIC be the food of love, play on, give me excess of it.” And
+            <q>“IF MUSIC be the food of love, play on, give me excess of it.”</q> And
             if not? Well, what exactly is it for? The production and consumption
             of music is a big part of the economy. The first use to which
             commercial recording, in the form of Edison's phonographs, was to
@@ -189,6 +189,28 @@
             <button class="buttons__main-btn">Chat to Me</button>
           </div>
         </div>
+        <div class="third-section__first-ellipse ellipse ellipse_big">
+          <div class="ellipse__subtract ellipse__substract_big"></div>
+        </div>
+        <img
+          class="third-section__figure"
+          src="img/Subtract.svg"
+          alt="Ellipse"
+        />
+        <img
+          class="third-section__music-sign"
+          src="icons/Zeilenbeginn.png"
+          alt="Ellipse"
+        />
+      </div>
+      <img
+          class="third-section__music-sign__second"
+          src="icons/Zeilenbeginn.png"
+          alt="Ellipse"
+        />
+      </div>
+      <div class="third-section__second-ellipse ellipse ellipse_big">
+        <div class="ellipse__subtract ellipse__substract_big"></div>
       </div>
     </section>
   </body>
