--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
           </div>
           <h1 class="right-wrapper__title title">Hello. I'm Vince</h1>
           <p class="right-wrapper__text">
-            I’m a guitar teacher with more than 10 years experience
+            I’m a guitar teacher with more than 10 years of teaching experience
           </p>
           <!-- Buttons -->
           <div class="right-wrapper__button buttons">
@@ -81,7 +81,7 @@
     <section class="second-section">
       <div class="container second-section__container">
         <!-- Title -->
-        <h2 class="second-section__title title">I’m teaching to play with</h2>
+        <h2 class="second-section__title title">I’M TEACHING TO PLAY WITH</h2>
         <!-- Cards -->
         <div class="second-section__cards-box">
           <div class="second-section__cards-item cards-item">
@@ -161,27 +161,34 @@
         <!-- Left wrapper -->
         <div class="third-section__left-wrapper">
           <!-- Title -->
-          <h3 class="third-section__left-title title">Learning</h3>
+          <h3 class="third-section__left-title title">LEARNING</h3>
         </div>
         <!-- Right wrapper -->
         <div class="third-section__right-wrapper">
           <!-- Title -->
           <h4 class="third-section__right-title title">
-            I’m training<br />virtuosos
+            I’M TRAINING<br />VIRTUOSOS
           </h4>
           <p class="third-section__text">
+            Do you wanna play guitar like Santana or Eddie Van Halen. You can
+            flash your musicians skills of Kurt Cobain before your girlfriend.
             Long childhood makes a technical and mental virtuoso out of man, but
             it also leaves a life-long residue of emotional immaturity in him.'
-            <br /><br />
             In addition to virtuosos and professionals, there are very deep
             musicians.
-            <br /><br />
-            <q>“IF MUSIC be the food of love, play on, give me excess of it.”</q> And
-            if not? Well, what exactly is it for? The production and consumption
-            of music is a big part of the economy. The first use to which
-            commercial recording, in the form of Edison's phonographs, was to
-            bring music to the living rooms and picnic tables of those who could
-            not afford to pay live musicians.
+            <br />
+            <q
+              >“IF MUSIC be the food of love, play on, give me excess of it.”</q
+            >
+            <br />
+            If you want to learn to play guitar, you might not know where to
+            start. What is the best way to learn guitar? Can I learn guitar at
+            home or do I need an instructor? Should I learn to play chords or
+            scales first? Your mind may be brimming with questions and it can
+            feel intimidating. You might also wonder if you’ll be good at
+            guitar. In some instances, new players don’t always give themselves
+            enough time to learn the basics and unfairly put a lot of pressure
+            on themselves to “get good” right out of the gate.
           </p>
           <div class="right-wrapper__button buttons">
             <button class="buttons__main-btn">Book a Lesson</button>
@@ -204,14 +211,36 @@
         />
       </div>
       <img
-          class="third-section__music-sign__second"
-          src="icons/Zeilenbeginn.png"
-          alt="Ellipse"
-        />
-      </div>
+        class="third-section__music-sign__second"
+        src="icons/Zeilenbeginn.png"
+        alt="Ellipse"
+      />
+
       <div class="third-section__second-ellipse ellipse ellipse_big">
         <div class="ellipse__subtract ellipse__substract_big"></div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="container footer__container">
+        <img src="img/deck.png" alt="deck" class="footer__img" />
+        <div class="footer__wrapper">
+          <h5 class="footer__title title">TRY FOR FREE<br />TRIAL LESSON</h5>
+
+          <div class="footer__icons-box icons">
+            <div class="icons__item">
+              <i class="fa-brands fa-facebook-f"></i>
+            </div>
+            <div class="icons__item">
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="icons__item"><i class="fa-brands fa-whatsapp"></i></div>
+            <div class="icons__item">
+              <i class="fa-brands fa-weixin"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
