--- a/index.html
+++ b/index.html
@@ -11,6 +11,78 @@
       src="https://kit.fontawesome.com/ade57427e9.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="apple-touch-icon" sizes="57x57" href="icons/favicons" />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="icons/favicons/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="icons/favicons/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="icons/favicons/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="icons/favicons/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="icons/favicons/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="icons/favicons/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="icons/favicons/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="icons/favicons/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="icons/favicons/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="icons/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="icons/favicons/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="icons/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="icons/favicons/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="icons/favicons/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <!-- First section -->
@@ -24,9 +96,13 @@
         </header>
         <nav class="main-section__nav nav-menu">
           <ul class="nav-menu__list">
-            <li class="nav-menu__list-item">About Me</li>
-            <li class="nav-menu__list-item">My Lessons</li>
-            <li class="nav-menu__list-item">Sign Up</li>
+            <li class="nav-menu__list-item">
+              <a href="#about-me">About Me</a>
+            </li>
+            <li class="nav-menu__list-item">
+              <a href="#my-lessons">My Lessons</a>
+            </li>
+            <li class="nav-menu__list-item"><a href="#Sign-up">Sign Up</a></li>
           </ul>
         </nav>
       </div>
@@ -78,7 +154,7 @@
     </section>
 
     <!-- Second section -->
-    <section class="second-section">
+    <section id="about-me" class="second-section">
       <div class="container second-section__container">
         <!-- Title -->
         <h2 class="second-section__title title">I’M TEACHING TO PLAY WITH</h2>
@@ -156,7 +232,7 @@
     </section>
 
     <!-- Third section -->
-    <section class="third-section">
+    <section id="my-lessons" class="third-section">
       <div class="container third-section__container">
         <!-- Left wrapper -->
         <div class="third-section__left-wrapper">
@@ -221,7 +297,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer id="Sign-up" class="footer">
       <div class="container footer__container">
         <img src="img/deck.png" alt="deck" class="footer__img" />
         <div class="footer__wrapper">
