--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
   <body>
     <!-- First section -->
     <section class="main-section">
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <div class="container main-section__nav-container">
         <!-- Navigation bar -->
         <header class="main-section__header">
@@ -187,7 +192,9 @@
               class="icons-item__img"
             />
             <p class="icons-item__text">
-              <span>12</span> years<br />of teaching
+              <span>12</span><br />
+              years of<br />
+              teaching
             </p>
           </div>
           <div class="second-section__icons-item icons-item">
